# targeted-adversarial-attacks

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: example_mnist.ipynb
targeted_fgsm/: fgsm.py
