[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "targeted-adversarial-attacks"
version = "0.1.0"
description = "Adversarial attack utilities including targeted iterative FGSM and PGD"
authors = [
  { name = "Yuxin Sun" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "matplotlib>=3.9.4",
    "tqdm>=4.67.1",
    "numpy>=2.0.2",
    "pytorch-lightning>=2.5.2",
    "scikit-learn>=1.6.1"
]

[tool.setuptools.packages.find]
exclude = ["example*"]
